After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 766619 - Space between ; and timeout= in session header is not RFC2326 compliant.
Space between ; and timeout= in session header is not RFC2326 compliant.
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-rtsp-server
git master
Other Linux
: Normal normal
: 1.8.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-05-18 16:17 UTC by Arkver
Modified: 2016-05-20 06:09 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch to remove the space between ; and timeout. (708 bytes, patch)
2016-05-18 16:17 UTC, Arkver
none Details | Review
Original git format-patch patch (961 bytes, patch)
2016-05-19 08:10 UTC, Arkver
committed Details | Review

Description Arkver 2016-05-18 16:17:16 UTC
Created attachment 328150 [details] [review]
Patch to remove the space between ; and timeout.

The RFC has this...

 Session  = "Session" ":" session-id [ ";" "timeout" "=" delta-seconds ]

which makes no provision for a space. Live555 copes OK, but this breaks the timeout param parsing in ffmpeg with subsequent dropouts if the server configures a timeout. Haven't checked Gstreamer's rtsp client, but I'd assume it handles the space. Other RTSP servers do not have a space here.

Trivial patch to remove the space attached.
Comment 1 Sebastian Dröge (slomo) 2016-05-19 07:15:14 UTC
Comment on attachment 328150 [details] [review]
Patch to remove the space between ; and timeout.

Can you attach this as a "git format-patch" formatted patch?
Comment 2 Sebastian Dröge (slomo) 2016-05-19 07:16:13 UTC
The RTSP 2 spec is even more explicit about this here:

   Session          =  "Session" HCOLON session-id
                       [ SEMI "timeout" EQUAL delta-seconds ]

There are no spaces anywhere
Comment 3 Sebastian Dröge (slomo) 2016-05-19 07:18:52 UTC
The parsing code in libgstrtsp is dropping all spaces anywhere in that string btw
Comment 4 Arkver 2016-05-19 08:10:12 UTC
Created attachment 328174 [details] [review]
Original git format-patch patch

Updated with original git format-patch version.
Comment 5 Sebastian Dröge (slomo) 2016-05-19 08:59:41 UTC
commit 178f2d6fe56668ccd5abdc749c79e04caaff2cfc
Author: Ian <ian.arkver.dev@gmail.com>
Date:   Wed May 18 16:48:44 2016 +0100

    rtsp-session: RFC2326 does not allow a space between ; and timeout in the Session header
    
    This works with rtspsrc and live555, but fails with e.g. ffmpeg.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=766619