rtsp-session: RFC2326 does not allow a space between ; and timeout in the Session header

This works with rtspsrc and live555, but fails with e.g. ffmpeg.

https://bugzilla.gnome.org/show_bug.cgi?id=766619